--- a/app/src/main/res/layout/activity_fun_fact.xml
+++ b/app/src/main/res/layout/activity_fun_fact.xml
@@ -9,82 +9,110 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/background_hitam_wayang"
-        android:scaleType="centerCrop">
-    </ImageView>
+        android:scaleType="centerCrop"
+        android:src="@drawable/background_hitam_wayang"></ImageView>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="36dp">
+
         <TextView
-            android:id="@+id/tv_scorekamuadalah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Score Kamu adalah"
-            android:textColor="@color/kresna_cream"
-            android:textAlignment="textEnd"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:textSize="16dp"/>
+            android:layout_toLeftOf="@+id/tv_nama_score"
+            android:text="Nilai "
+            android:textAlignment="textEnd"
+            android:textColor="@color/kresna_cream"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/tv_nama_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@id/tv_adalah_score"
+            android:text="Nama"
+            android:textStyle="bold"
+            android:textAlignment="textEnd"
+            android:textColor="@color/kresna_cream"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/tv_adalah_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:text=" adalah"
+            android:textAlignment="textEnd"
+            android:textColor="@color/kresna_cream"
+            android:textSize="16dp" />
+
         <TextView
             android:id="@+id/tv_nilai_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/tv_nama_score"
+            android:layout_alignParentEnd="true"
             android:text="8/10"
+            android:textAlignment="textEnd"
             android:textColor="@color/kresna_cream"
             android:textSize="48dp"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/tv_scorekamuadalah"/>
+            android:textStyle="bold" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_funfact"
-            android:layout_below="@id/tv_nilai_score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/tv_nilai_score"
+            android:layout_marginTop="36dp"
             app:cardBackgroundColor="@color/kresna_cream"
-            app:cardCornerRadius="12dp"
-            android:layout_marginTop="36dp">
+            app:cardCornerRadius="12dp">
+
             <LinearLayout
-                android:padding="24dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="24dp">
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="144dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/funfact_rencang"/>
+                    android:src="@drawable/funfact_rencang" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Judul"
-                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:textSize="16dp"
-                        android:textColor="@color/black"/>
+                        android:textStyle="bold" />
 
                     <ImageButton
                         android:id="@+id/btn_play_audio"
-                        android:layout_marginLeft="4dp"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
                         android:layout_below="@id/cv_funfact"
+                        android:layout_marginLeft="4dp"
                         android:background="@android:color/transparent"
-                        android:src="@drawable/ic_baseline_play_arrow_24"/>
+                        android:src="@drawable/ic_baseline_play_arrow_24" />
                 </LinearLayout>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="4dp"
-                    android:text="Rencong atau yang dalam Bahasa Aceh yang ditulis dengan huruf latin dibaca Rintjong adalah senjata khas Suku Aceh. Rencong merupakan simbol identitas diri, keberanian, dan ketangguhan Suku Aceh. Ada beberapa jenis rencong. Pertama Rencong Pudoi yaitu Rencong yang belum sempurna pada bentuk gagangnya."/>
+                    android:text="Rencong atau yang dalam Bahasa Aceh yang ditulis dengan huruf latin dibaca Rintjong adalah senjata khas Suku Aceh. Rencong merupakan simbol identitas diri, keberanian, dan ketangguhan Suku Aceh. Ada beberapa jenis rencong. Pertama Rencong Pudoi yaitu Rencong yang belum sempurna pada bentuk gagangnya." />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
