--- a/app/src/main/res/layout/activity_learn_number.xml
+++ b/app/src/main/res/layout/activity_learn_number.xml
@@ -25,117 +25,139 @@
         android:textColor="@color/kresna_cream"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_soal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_margin="24dp"
+        android:textAlignment="center"
+        android:layout_below="@+id/tv_logo"
+        app:cardBackgroundColor="@color/kresna_cream"
+        app:cardCornerRadius="30dp">
+
+        <TextView
+            android:id="@+id/tv_soal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="24dp"
+            android:gravity="center"
+            android:text="10"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="48dp"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
+
+
+    <GridLayout
+        android:id="@+id/gl_answer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_lanjut"
+        android:layout_below="@+id/cv_soal"
+        android:layout_marginRight="24dp"
+        android:layout_marginLeft="24dp"
+        android:columnCount="2">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cv_soal"
-            android:layout_width="144dp"
-            android:layout_height="144dp"
-            android:layout_margin="16dp"
-            android:textAlignment="center"
-            app:cardBackgroundColor="@color/kresna_cream"
-            app:cardCornerRadius="30dp">
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:layout_margin="2dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1">
 
-            <TextView
-                android:id="@+id/tv_soal"
+            <ImageView
+                android:id="@+id/btn_option1_indicator"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="10"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="48dp"
-                android:textStyle="bold" />
+                android:background="@android:color/holo_red_dark" />
+
+            <ImageButton
+                android:id="@+id/btn_option1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="1dp"
+                android:background="@color/kresna_cream"
+                android:scaleType="centerInside"
+                android:text="option1" />
         </androidx.cardview.widget.CardView>
 
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:columnCount="1">
+        <androidx.cardview.widget.CardView
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:layout_margin="2dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/btn_option2_indicator"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:background="@android:color/holo_red_dark" />
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/btn_option1"
-                    android:layout_width="144dp"
-                    android:layout_height="144dp"
-                    android:layout_margin="4dp"
-                    android:text="option1" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/btn_option2"
-                    android:layout_width="144dp"
-                    android:layout_height="144dp"
-                    android:layout_margin="4dp"
-                    android:text="option2" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
-
-            <LinearLayout
+            <ImageButton
+                android:id="@+id/btn_option2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_margin="1dp"
+                android:background="@color/kresna_cream"
+                android:scaleType="centerInside"
+                android:text="option1" />
+        </androidx.cardview.widget.CardView>
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:layout_margin="2dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1">
 
-                <Button
-                    android:id="@+id/btn_option3"
-                    android:layout_width="144dp"
-                    android:layout_height="144dp"
-                    android:layout_margin="4dp"
-                    android:text="option3" />
+            <ImageView
+                android:id="@+id/btn_option3_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/holo_red_dark" />
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+            <ImageButton
+                android:id="@+id/btn_option3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="1dp"
+                android:background="@color/kresna_cream"
+                android:scaleType="centerInside"
+                android:text="option1" />
+        </androidx.cardview.widget.CardView>
 
-                <Button
-                    android:id="@+id/btn_option4"
-                    android:layout_width="144dp"
-                    android:layout_height="144dp"
-                    android:layout_margin="4dp"
-                    android:text="option4" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:layout_margin="2dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1">
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+            <ImageView
+                android:id="@+id/btn_option4_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/holo_red_dark" />
 
-            </LinearLayout>
+            <ImageButton
+                android:id="@+id/btn_option4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="1dp"
+                android:background="@color/kresna_cream"
+                android:scaleType="centerInside"
+                android:text="option1" />
+        </androidx.cardview.widget.CardView>
+    </GridLayout>
 
-
-        </GridLayout>
-
-        <Button
-            android:id="@+id/btn_lanjut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lanjut"
-            android:visibility="invisible" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_lanjut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="24dp"
+        android:text="Lanjut"
+        android:visibility="invisible" />
 </RelativeLayout>
