--- a/app/src/main/res/drawable/ic_baseline_stop_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_stop_24.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
+    android:tint="@color/kresna_cream"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M6,6h12v12H6z"/>
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/kresna_cream"
+        android:pathData="M6,6h12v12H6z" />
 </vector>
