--- a/app/src/main/res/layout/activity_learn_number.xml
+++ b/app/src/main/res/layout/activity_learn_number.xml
@@ -8,148 +8,178 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/iv_kresna_logo"
+        android:layout_width="96dp"
+        android:layout_height="32.26dp"
+        android:layout_margin="24dp"
+        android:src="@drawable/kresna_logo" />
+
     <TextView
         android:id="@+id/tv_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="24dp"
         android:text="Score: 0"
         android:textColor="@color/white" />
 
     <TextView
-        android:id="@+id/tv_logo"
+        android:id="@+id/tv_salah"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:text="KRESNA"
-        android:textColor="@color/kresna_cream"
-        android:textStyle="bold" />
+        android:layout_margin="24dp"
+        android:layout_toLeftOf="@+id/tv_score"
+        android:text="Salah: 0"
+        android:textColor="@color/white" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_soal"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_array_salah"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:textAlignment="center"
-        android:layout_below="@+id/tv_logo"
-        app:cardBackgroundColor="@color/kresna_cream"
-        app:cardCornerRadius="30dp">
-
-        <TextView
-            android:id="@+id/tv_soal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="24dp"
-            android:gravity="center"
-            android:text="10"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="48dp"
-            android:textStyle="bold" />
-    </androidx.cardview.widget.CardView>
-
+        android:layout_toLeftOf="@+id/tv_salah"
+        android:text="Array Salah: 0"
+        android:textColor="@color/white" />
 
     <GridLayout
-        android:id="@+id/gl_answer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_lanjut"
-        android:layout_below="@+id/cv_soal"
-        android:layout_marginRight="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_height="match_parent"
+        android:layout_below="@id/iv_kresna_logo"
         android:columnCount="2">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_soal"
             android:layout_width="1dp"
             android:layout_height="1dp"
-            android:layout_margin="2dp"
+            android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1">
+            android:layout_marginLeft="64dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginBottom="64dp"
+            android:textAlignment="center"
+            app:cardBackgroundColor="@color/kresna_cream"
+            app:cardCornerRadius="4dp">
 
-            <ImageView
-                android:id="@+id/btn_option1_indicator"
+            <TextView
+                android:id="@+id/tv_soal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/holo_red_dark" />
-
-            <ImageButton
-                android:id="@+id/btn_option1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="1dp"
-                android:background="@color/kresna_cream"
-                android:scaleType="centerInside"
-                android:text="option1" />
+                android:layout_margin="24dp"
+                android:gravity="center"
+                android:text="10"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="48dp"
+                android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:layout_margin="2dp"
+
+        <GridLayout
+            android:id="@+id/gl_answer"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1">
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="64dp"
+            android:layout_marginBottom="64dp"
+            android:layout_toRightOf="@+id/cv_soal"
+            android:columnCount="2">
 
-            <ImageView
-                android:id="@+id/btn_option2_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/holo_red_dark" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="2dp">
 
-            <ImageButton
-                android:id="@+id/btn_option2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="1dp"
-                android:background="@color/kresna_cream"
-                android:scaleType="centerInside"
-                android:text="option1" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/btn_option1_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/holo_red_dark" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:layout_margin="2dp"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1">
+                <ImageButton
+                    android:id="@+id/btn_option1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:background="@color/kresna_cream"
+                    android:scaleType="centerInside"
+                    android:text="option1" />
+            </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/btn_option3_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/holo_red_dark" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="2dp">
 
-            <ImageButton
-                android:id="@+id/btn_option3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="1dp"
-                android:background="@color/kresna_cream"
-                android:scaleType="centerInside"
-                android:text="option1" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/btn_option2_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/holo_red_dark" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:layout_margin="2dp"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1">
+                <ImageButton
+                    android:id="@+id/btn_option2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:background="@color/kresna_cream"
+                    android:scaleType="centerInside"
+                    android:text="option1" />
+            </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/btn_option4_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/holo_red_dark" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="2dp">
 
-            <ImageButton
-                android:id="@+id/btn_option4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="1dp"
-                android:background="@color/kresna_cream"
-                android:scaleType="centerInside"
-                android:text="option1" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/btn_option3_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/holo_red_dark" />
+
+                <ImageButton
+                    android:id="@+id/btn_option3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:background="@color/kresna_cream"
+                    android:scaleType="centerInside"
+                    android:text="option1" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="2dp">
+
+                <ImageView
+                    android:id="@+id/btn_option4_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/holo_red_dark" />
+
+                <ImageButton
+                    android:id="@+id/btn_option4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:background="@color/kresna_cream"
+                    android:scaleType="centerInside"
+                    android:text="option1" />
+            </androidx.cardview.widget.CardView>
+        </GridLayout>
     </GridLayout>
+
 
     <Button
         android:id="@+id/btn_lanjut"
