--- a/app/src/main/res/layout/activity_select_difficulty.xml
+++ b/app/src/main/res/layout/activity_select_difficulty.xml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".SelectDifficultyActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/iv_kresna_logo"
+        android:layout_width="96dp"
+        android:layout_height="32.26dp"
+        android:layout_margin="24dp"
+        android:src="@drawable/kresna_logo"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Isi nama kamu: "
-        android:textColor="@color/kresna_cream" />
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_pilih"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pilih tingkat kesulitan: "
+            android:textColor="@color/kresna_cream"
+            android:textAlignment="center"
+            android:layout_gravity="center"/>
 
-    <EditText
-        android:id="@+id/et_nama"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/kresna_cream"
-        android:textAlignment="center"
-        android:hint="nama"
-        android:layout_margin="4dp"/>
+        <GridLayout
+            android:id="@+id/gl_difficulty"
+            android:layout_width="wrap_content"
+            android:layout_height="144dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp">
+            <Button
+                android:id="@+id/btn_easy"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:text="@string/easy" />
 
+            <Button
+                android:id="@+id/btn_medium"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="36dp"
+                android:layout_marginRight="36dp"
+                android:text="@string/medium" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pilih tingkat kesulitan: "
-        android:textColor="@color/kresna_cream"
-        android:layout_marginTop="24dp"/>
+            <Button
+                android:id="@+id/btn_hard"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:text="@string/hard"/>
+        </GridLayout>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_easy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:text="@string/easy" />
-
-    <Button
-        android:id="@+id/btn_medium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:text="@string/medium" />
-
-    <Button
-        android:id="@+id/btn_hard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:text="@string/hard" />
-
-</LinearLayout>
+</RelativeLayout>
